<resources>
    <string name="app_name">Cevher</string>
    <string name="ayarlar">Ayarlar</string>
    <string name="sifirla">Sayacı Yenile</string>
    <string name="bilgi">Bilgi</string>
    <string name="tesbih">Sanal Tesbih</string>
    <string name="tesbihat">Namaz Tesbihatı</string>
    <string name="yenile">Yenile</string>
    <string name="cevsen1">Cevşen</string>
    <string name="tamam">Tamam</string>
    <string name="manuel">Manuel Tesbih</string>
    <string name="cvsarapca">Arapça</string>
    <string name="cvsturkce">Türkçe</string>
    <string name="cvsmeal">Meal</string>
    <string name="kaydet">Tamam</string>
    <string name="cevsen">Cevşen</string>
    <string name="kuran">"Kuran-ı Kerim"</string>
    <string-array name="tecvid">

        <item>Tecvid Dersleri</item>
        <item>Ders1</item>
        <item>Ders2</item>
        <item>Ders3</item>
        <item>Ders4</item>
        <item>Ders5</item>
        <item>Ders6</item>
        <item>Ders7</item>
        <item>Ders8</item>
        <item>Ders9</item>
        <item>Ders10</item>
        <item>Ders11</item>
        <item>Ders12</item>
        <item>Ders13</item>
    </string-array>
    <string name="veritabani">VeriTabani</string>
    <string name="anasayfa">Anasayfa</string>
    <string name="ilmihal">İlmihal</string>
    <string name="dualar">Dualar</string>
    <string name="uhud">Şüheda-i Uhud</string>
    <string name="bedir">Ashab-ı Bedir</string>
    <string name="zikirmatik">Zikirmatik</string>
    <string name="vakit">Namaz Vakitleri</string>
    <string name="html_title">

          <![CDATA[
                     <a><font color=#8B4789>Uygulama Kılavuzu</a>

                ]]>
      </string>
    <string name="html_cevsensayfasi">

          <![CDATA[
                     <a><font color=#8B4789>Cevşen Sayfası Ayarları</a>

                ]]>
      </string>
    <string name="html_kuransayfasi">

          <![CDATA[
                     <a><font color=#8B4789>Kuran Sayfası Ayarları</a>

                ]]>
      </string>
    <string name="html_kaydet">

          <![CDATA[
                     <a><font color=#8B4789>Kaydet</a>

                ]]>
      </string>
    <string name="html_progresbaslik">

          <![CDATA[
                    <a><font color=#8B4789>Namaz Vakitleri</a>

                ]]>
      </string>
    <string name="html_progresmetin"><![CDATA[


                     <a><font color=#8B4789>Bilgiler hazırlanıyor…</a>


      ]]></string>
    <string name="html_sayacbaslik">

          <![CDATA[
                     <a><font color=#8B4789>Sayacı Başa Al</a>

                ]]>
      </string>
    <string name="html_sayacmetin"><![CDATA[


                    <a><font color=#8B4789>Sanal Sayaç başa alınacak.</a>


      ]]></string>
    <string name="html_yonlendir">

          <![CDATA[
                     <a><font color=#8B4789>Sayfa Yönlendirme</a>

                ]]>
      </string>
    <string name="html_yonlendirmetin"><![CDATA[


                     <a><font color=#8B4789>Gitmek istediğiniz sayfayı seçiniz</a>


      ]]></string>
    <string name="mealler">Mealler</string>
    <string name="tefsirler">Tefsirler</string>
</resources>